Fix property backface-visibility on Firefox

--- a/login/static/login/css/login.css
+++ b/login/static/login/css/login.css
@@ -28,7 +28,6 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  transform: all 2s ease;
   width: 100;
   overflow: hidden;
 }
@@ -53,8 +52,9 @@
 
 .flip-card-inner {
   text-align: center;
-  transition: transform 0.6s; /* Smooth animation */
+  transition: transform 1s; /* Smooth animation */
   transform-style: preserve-3d;
+  perspective: 200rem;
 }
 
 .flip-card.flipped .flip-card-inner,
@@ -63,12 +63,28 @@
   height: 56rem;
 }
 
+/* .flip-card.flipped .flip-card-front {
+  visibility: hidden;
+  opacity: 0;
+  display: none;
+}
+.flip-card.flipped .flip-card-back {
+  visibility: visible;
+  opacity: 1;
+}
+
+.flip-card-back {
+  visibility: hidden;
+  opacity: 0;
+} */
+
 .flip-card-front,
 .flip-card-back {
   width: 100%;
   height: 100%;
   backface-visibility: hidden; /* Hide back of the card */
   position: absolute;
+  transform: rotateX(0deg);
 }
 
 /* .flip-card-front {
